# acl25-generative-ai-detection

./: .dockerignore  .gitignore  Dockerfile  README.md  build-docker.sh  pyproject.toml
data/datasets/pan24-extended-converted/train/: state.json
data/datasets/pan24-extended-converted/validation/: dataset_info.json  state.json
genai_detection/: eval_util.py  util.py
genai_detection/cli/: dataset.py  detect.py  finetune.py  generate.py  main.py
genai_detection/detectors/: __init__.py  binoculars.py  detectgpt.py  detectllm.py  detector_base.py  fastdetectgpt.py  majority_ensemble.py  ppmd.py  supervised.py  word_length.py
genai_detection/perturbators/: perturbator_base.py  t5_mask.py
notebooks/: entropy.ipynb
scripts/: convert-ghostbuster.sh  convert-human-detectors.sh  convert-kaggle.sh  convert-m4.sh  convert-mage.sh  convert-pan24-extended.sh  convert-pan24-o1-case-study.sh  convert-pan24.sh  convert-raid.sh
