[tool.poetry]
name = "generative-ai-detection"
version = "0.1.0"
description = "Generative AI Detection Research Code"
authors = ["Janek Bevendorff <janek.bevendorff@uni-weimar.de>"]
readme = "README.md"
packages = [
    { include = "genai_detection" },
]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.48.1"
datasets = "^3.1.0"
accelerate = "^1.2.1"
peft = "^0.14.0"
click = "^8.1.7"
torch = "^2.5.1"
bitsandbytes = "^0.45.0"
tqdm = "^4.67.1"
scikit-learn = "^1.6.1"
google-cloud-aiplatform = "^1.77.0"
openai = "^1.59.8"
pyppmd = "^1.1.1"
skops = "^0.11.0"
xgboost = "^2.1.3"
seaborn = {extras = ["stats"], version = "^0.13.2"}
parallel-pandas = "^0.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
genai-detection = 'genai_detection.cli.main:main'
